@@ -8,6 +8,7 @@ RECENT CHANGES
 
 * #273 Allow directory as argument for db:dump (by Rick Kuipers)
 * #274 Running Setup Resource Scripts Incrementally (by Alan Storm)
+* #278 After magerun install I always see the Magento Installation Wizard
 * #279 Updated documentation to include a few undocumented parameters to config:get (by Tegan Snyder)
 
 ======
